// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ErrorNode > basic > getNodeDisplayFile 1`] = `
"from uuid import UUID

from vellum_ee.workflows.display.editor import NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.nodes import BaseErrorNodeDisplay

from ...nodes.error_node import ErrorNode


class ErrorNodeDisplay(BaseErrorNodeDisplay[ErrorNode]):
    label = "Error Node"
    node_id = UUID("2cd960a3-cb8a-43ed-9e3f-f003fc480951")
    target_handle_id = UUID("370d712d-3369-424e-bcf7-f4da1aef3928")
    node_input_ids_by_name = {
        "error_source_input_id": UUID("d2287fee-98fb-421c-9464-e54d8f70f046")
    }
    display_data = NodeDisplayData(
        position=NodeDisplayPosition(x=0, y=0), width=None, height=None
    )
"
`;

exports[`ErrorNode > basic > getNodeFile 1`] = `
"from vellum import VellumError
from vellum.workflows.nodes.displayable import ErrorNode as BaseErrorNode


class ErrorNode(BaseErrorNode):
    error = VellumError(message="Something went wrong!", code="USER_DEFINED_ERROR")
"
`;

exports[`ErrorNode > should codegen successfully without error source inputs > getNodeDisplayFile 1`] = `
"from uuid import UUID

from vellum_ee.workflows.display.editor import NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.nodes import BaseErrorNodeDisplay

from ...nodes.error_node import ErrorNode


class ErrorNodeDisplay(BaseErrorNodeDisplay[ErrorNode]):
    label = "Error Node"
    node_id = UUID("2cd960a3-cb8a-43ed-9e3f-f003fc480951")
    target_handle_id = UUID("370d712d-3369-424e-bcf7-f4da1aef3928")
    display_data = NodeDisplayData(
        position=NodeDisplayPosition(x=0, y=0), width=None, height=None
    )
"
`;

exports[`ErrorNode > should codegen successfully without error source inputs > getNodeFile 1`] = `
"from vellum.workflows.nodes.displayable import ErrorNode as BaseErrorNode


class ErrorNode(BaseErrorNode):
    pass
"
`;
